experimental/ir/testdata/syntax/2023_syntax.proto.stderr.txt
error: editions must use the `edition` keyword%!(EXTRA taxa.Noun=`syntax`
       declaration)
  --> testdata/syntax/2023_syntax.proto:15:1
   |
15 | syntax = 2023;
   | ^^^^^^
  help: replace with `edition`
   |
15 | - syntax = 2023;
15 | + edition = 2023;
   |

error: the value of a `syntax` declaration must be a string literal
  --> testdata/syntax/2023_syntax.proto:15:10
   |
15 | syntax = 2023;
   |          ^^^^
  help: add quotes to make this a string literal
   |
15 | syntax = "2023";
   |          +    +

encountered 2 errors
